@@ -10,3 +10,4 @@ void test_message_set_content_simple(CamelMimePart *part, int how, const char *t
 int test_message_write_file(CamelMimeMessage *msg, const char *name);
 CamelMimeMessage *test_message_read_file(const char *name);
 int test_message_compare_content(CamelDataWrapper *dw, const char *text, int len);
+int test_message_compare (CamelMimeMessage *msg);
